# gaming-lifetimevalue

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
confs/: params.yml
notebooks/: 01-initial_data_exploration.py  02_baseline_regression.py  03_cohort_classifer.py  04_cohort_regression.py  6_cohort_classifer.py  simple_cohort_classifer.py
notebooks/old/: inpainting_missing_values.py  simple_cohort_classifer.py
src/gaming_lifetimevalue/: __init__.py
src/gaming_lifetimevalue/evaluation/: metrics.py
src/gaming_lifetimevalue/jobs/: __init__.py  evaluate_models.py  evaluate_pipeline.py  infer_cohort_classifier.py  infer_cohort_regressor.py  preprocess_input_data.py  preprocessing.py  train_cohort_classifier.py  train_cohort_regressor.py
src/gaming_lifetimevalue/pipelines/: inference.py  preprocessing.py  training.py
src/gaming_lifetimevalue/transforms/: __init__.py  feature_engineering.py  preprocessing.py
src/gaming_lifetimevalue/utils/: config_loader.py  mlflow_utils.py
