[project]
name = "gaming-lifetimevalue"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lightgbm>=4.6.0",
    "marimo>=0.18.4",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "seaborn>=0.13.2",
    "skrub>=0.7.0",
]
