[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gaming-lifetimevalue"
version = "0.1.0"
description = "Machine Learning Pipeline to predict user lifetimevalue"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kaleido>=1.2.0",
    "lightgbm>=4.6.0",
    "marimo>=0.18.4",
    "matplotlib>=3.10.8",
    "mlflow>=3.8.1",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "pytest>=9.0.2",
    "seaborn>=0.13.2",
    "skrub>=0.7.0",
]
